--- a/src/components/core/Header/Header.scss
+++ b/src/components/core/Header/Header.scss
@@ -84,7 +84,6 @@ header {
   }
   .list-items {
     flex-direction: row;
-    position: absolute;
     top: 40px;
     width: 100vw;
     left: 0;
@@ -110,4 +109,8 @@ header {
   h2.user {
     font-size: 16px;
   }
+}
+
+.hide {
+  display: none;
 }
