--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-  background-image: url('./assets/background.jpg');
+  background: url('./assets/background.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100vh;
 }
