--- a/src/components/core/Header/Header.scss
+++ b/src/components/core/Header/Header.scss
@@ -67,7 +67,7 @@ header {
     justify-content: space-between;
   }
   #menu {
-    // background-color: colors.$theme-background;
+    background-color: colors.$theme-background;
     color: #fff;
     font-size: 28px;
     display: block;
@@ -84,18 +84,16 @@ header {
   }
   .list-items {
     flex-direction: row;
+    position: absolute;
     top: 40px;
     width: 100vw;
     left: 0;
-    // background-color: colors.$theme-background;
+    background-color: colors.$theme-background;
     padding: 0 0.85rem;
   }
   .list-items .item {
     padding: 10px 5px;
   }
-
-  // .list-item .item a {
-  // }
 
   #main-navigation h1 {
     display: block;
@@ -109,8 +107,4 @@ header {
   h2.user {
     font-size: 16px;
   }
-}
-
-.hide {
-  display: none;
 }
